# server/errors/NotFoundError.ts
@@ -2,7 +2,7 @@ import { InternalError } from "./InternalError.js";
 
 export class NotFoundError extends InternalError {
 	constructor() {
-		super({ status: 404, message: "No data found", harmless: true });
+		super({ status: 404, code: "not-found", message: "No data found", harmless: true });
 		this.name = "NotFoundError";
 	}
 }
